# oni-mod-cli

./: .gitignore  Cargo.toml  README.md
resource/: Mod.cs
src/: cli_dialogue.rs  global_const.rs  main.rs  tests.rs  utils.rs
src/data/: config.rs
src/project/: csproj.rs  git.rs  mod.rs  solution.rs
