[package]
name = "oni-mod-cli"
version = "0.1.0"
authors = ["秃头灯笼鱼"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4.21"
zip = "0.6.6"
serde-xml-rs = "0.6.0"
xml-rs = "0.8.13"
reqwest = {version = "0.11.22", features = ["json", "blocking"] }
scraper = "0.12"
walkdir = "2.3.3"
thiserror = "1.0"
anyhow = "1.0"
md5 = "0.7.0"
clap = { version = "4.5.4" , features = ["derive"]}
dialoguer = "0.11.0"
chrono = "0.4.35"
spinners = "4.1.1"


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]